--- a/frontend/src/components/NeedyByUserid/needyByUserId.css
+++ b/frontend/src/components/NeedyByUserid/needyByUserId.css
@@ -73,7 +73,7 @@
 .maiDivMonyTow{
     display: grid;
     /* grid-template-columns: 1fr 1fr; */
-    grid-template-columns: 65% 25%; 
+    grid-template-columns: 50% 20%; 
 
 }
 .divImageMonynew{
@@ -105,6 +105,7 @@ font-size: 24px !important;
     height: 460px;
 }
 
+
 /* .newbi-trash-fill{
 
   
@@ -116,3 +117,10 @@ button[disabled]
 
   
 }  */
+
+
+
+.newtestmoney{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
