--- a/frontend/src/components/CreateCase/addNeedy2.css
+++ b/frontend/src/components/CreateCase/addNeedy2.css
@@ -3,25 +3,25 @@
     /* display: flex; */
     align-items: center;
     justify-content: center;
-    background-color: #f1f1f1;
+    /* background-color: #f1f1f1; */
     font-family: "Open Sans",sans-serif !important;
   }
   .ourNeedyCase-section{
     background: url("https://res.cloudinary.com/dqsg0zf1r/image/upload/v1668097554/samples/project%205/fitrat_iNsan_wn8qlh.png") no-repeat left;
     background-size: 55%;
-    height: 110vh;
+    height: 90vh;
     background-color: #fdfdfd;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* padding:  0; */
-    padding: 100px 0;
+    padding: 50px 0;
   }
   .ourNeedyCase-inner-container{
     width: 55%;
     /* height: 200px; */
     float: right;
     background-color: #efefef;
-    padding: 55px;
-    height: 110vh;
+    padding: 31px;
+    height: 91vh ;
   }
   .ourStory-inner-container h2{
     margin-bottom: 100px;
