--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   height: 100px;
-  background-color: #F8BDC1;
+  background-color: #efefef;/*F8BDC1*/
   display: flex;
   align-items: center;
   justify-content: space-around;
