--- a/frontend/src/components/Header/video.css
+++ b/frontend/src/components/Header/video.css
@@ -335,12 +335,12 @@
       top: 100%;
       right: 0;
       width: 100%;
-      height: 280%;
+      /* height: 280%; */
       padding-top: 12px;
-      background-color:#545454; 
+      background-color:gray; 
       /* background:rgba(2, 1, 1, 0.5) ;  */
       font-size: 20px;
-      clip-path: polygon(0 0, 100% 0, 100% 0, 0 0); 
+      clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     }
     .navbar-links_vidNav{
       flex-direction: column;
