--- a/frontend/src/components/OurImapct/ourImapct.css
+++ b/frontend/src/components/OurImapct/ourImapct.css
@@ -33,7 +33,7 @@
     flex: 1;
     text-transform: uppercase;
     font-size: 18px;
-    color: #fff;
+    color: #545454;
     font-weight: bold;
     
 }
